--- a/cdx_core/config/locales/views/js_screen_views.en.yml
+++ b/cdx_core/config/locales/views/js_screen_views.en.yml
@@ -239,6 +239,7 @@ en:
       weeks_in_treatment_label: "Weeks in treatment"
       comments: "Comments"
       presumptive: "RR-TB/MDR-TB Suspect"
+      sample_other: 'Please specify your sample type'
 
     outstanding_tests_table:
       outstanding_tests_title: "Outstanding Tests"
