--- a/cdx_core/config/locales/models/xpert_result.en.yml
+++ b/cdx_core/config/locales/models/xpert_result.en.yml
@@ -7,7 +7,7 @@ en:
         examined_by: 'Examined by'
         result_at: 'Date of result'
         rifampicin: 'Rifampicin resistance'
-        trace: 'Trace'
-        tuberculosis: 'M. Tuberculosis Detection Volume'
+        trace: 'Qualification'
+        tuberculosis: 'M. Tuberculosis Detection'
         sample_identifier_id: 'Sample ID'
         feedback_message_id: 'Feedback message'
