--- a/cdx_core/config/locales/views/home.en.yml
+++ b/cdx_core/config/locales/views/home.en.yml
@@ -42,6 +42,8 @@ en:
       header: 'Settings'
       alert: 'Alerts'
       alerts_notice: 'Keep your team notified about important stuff.'
+      test_results: Test Results
+      test_results_notice: Manage test results
       role:
         zero: 'No roles'
         one: "1 Role"
