--- a/cdx_vietnam/config/locales/views/layout.vi.yml
+++ b/cdx_vietnam/config/locales/views/layout.vi.yml
@@ -12,7 +12,7 @@ vi:
       devices: 'Thiết bị'
       settings: 'Cài đặt'
       my_account: 'Tài khoản của tôi'
-      api_tokens: 'API tokens'
+      api_tokens: 'Thẻ API'
       log_out: 'Đăng xuất'
       log_in: 'Đăng nhập'
       integration_logs: 'Integration Logs'
