2553, 2550, 2498, 2355 - changes to patients dropdown, episode, and results formatting

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -76,7 +76,9 @@ en:
       tuberculosis:
         detected: 'Detected'
         not_detected: 'Not Detected'
-        indeterminate: 'Invalid / No result / Error'
+        indeterminate: 'Invalid'
+        no_result: 'No result'
+        err: 'Error'
       rifampicin:
         detected: 'Detected'
         not_detected: 'Not Detected'
