--- a/cdx_vietnam/config/locales/models/cdx_vietnam/patient.en.yml
+++ b/cdx_vietnam/config/locales/models/cdx_vietnam/patient.en.yml
@@ -2,5 +2,6 @@ en:
   activerecord:
     attributes:
       patient:
-        social_security_code: 'CMND'
+        name: 'Name *'
+        social_security_code: 'CMND *'
         vitimes_id: Vitimes Log ID
