--- a/cdx_vietnam/config/locales/views/cdx_vietnam/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/cdx_vietnam/patients.vi.yml
@@ -2,5 +2,7 @@ vi:
   patients:
     form:
       social_security_code: 'CMND'
+      vitimes_id: 'Mã bệnh nhân Vitimes'
+      vitimes_id_tooltip: 'Nhập mã bệnh nhân ký Vitimes'
       wrong_social_security_number: "Dữ liệu nhập vào không hợp lệ (tối thiểu 9 ký tự, tối đa 15 ký tự). Bạn có muốn lưu lại không?"
       social_security_code_tooltip: 'CMND (tối thiểu 9 ký tự, tối đa 15 ký tự)'
