Add in asterix for episodes

--- a/cdx_vietnam/config/locales/models/episode.vi.yml
+++ b/cdx_vietnam/config/locales/models/episode.vi.yml
@@ -2,7 +2,7 @@ vi:
   activerecord:
     attributes:
       episode:
-        diagnosis: 'Chẩn đoán'
+        diagnosis: 'Chẩn đoán *'
         hiv_status: 'Tình trạng nhiễm HIV'
         initial_history: 'Lịch sử'
         drug_resistance: 'Kháng thuốc'
