--- a/cdx_vietnam/config/locales/views/episodes.vi.yml
+++ b/cdx_vietnam/config/locales/views/episodes.vi.yml
@@ -3,11 +3,11 @@ vi:
     form:
       header: 'Tập cho %{patient_name}'
       history: 'Lịch sử điều trị trước đây'
-      history_tb: 'Lịch sử trước đây của TB'
+      history_tb: 'Lịch sử trước đây của TB *'
       select_type_of_episode: 'Chọn loại tập'
       episode_details: 'Thông tin tập'
       episode_type_not_available: 'Loại tập này hiện không có có sẵn'
-      hiv_status: 'Trạng thái HIV hiện tại'
+      hiv_status: 'Trạng thái HIV hiện tại *'
       episode_previous_history_required: 'Bắt buộc có lịch sử tập trước đây'
     create:
       new_episode: 'Tập mới đã được tạo'
