--- a/cdx_vietnam/config/locales/views/defaults.vi.yml
+++ b/cdx_vietnam/config/locales/views/defaults.vi.yml
@@ -1,8 +1,8 @@
 vi:
   views:
     back: 'Quay lại'
-    delete: 'Delete'
     cancel: 'Hủy bỏ'
+  	delete: 'Xóa'
     save: 'Lưu'
     say_yes: 'Có'
     say_no: 'Không'
