vn patient region dropdowns / vn extensions

--- a/cdx_vietnam/config/locales/select.en.yml
+++ b/cdx_vietnam/config/locales/select.en.yml
@@ -1,5 +1,10 @@
 en:
   select:
+    address:
+      regions:
+        northern: 'Northern'
+        southern: 'Southern'
+        central: 'Central'
     episode:
       history:
         other: 'Other previous treatments'
