add field nationality to patient and update it to etb json

--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -6,6 +6,9 @@ en:
         male: 'Male'
         female: 'Female'
         other: 'Other'
+      nationality_option:
+        native: 'NATIVE'
+        foreign: 'FOREIGN'
     encounter:
       testing_for_options:
         tb: 'Tuberculosis'
