--- a/cdx_vietnam/config/locales/views/cdx_vietnam/patients.en.yml
+++ b/cdx_vietnam/config/locales/views/cdx_vietnam/patients.en.yml
@@ -7,3 +7,5 @@ en:
       wrong_social_security_number: "Your input does not confirm to the validation criteria (Min 9 characters Max 15). Do you want to save anyway?"
       social_security_code_tooltip: "CMND (Min 9 characters Max 15)"
       wrong_medical_insurance_num: This is not a valid Medical Insurance Number (2 characters followed by 13 digits). Do you still wish to continue?
+      nationality: Nationality
+      nationality_tooltip: Choose your nationality
