--- a/cdx_vietnam/config/locales/views/cdx_vietnam/patients.vi.yml
+++ b/cdx_vietnam/config/locales/views/cdx_vietnam/patients.vi.yml
@@ -6,3 +6,10 @@ vi:
       vitimes_id_tooltip: 'Nhập mã bệnh nhân ký Vitimes'
       wrong_social_security_number: "Dữ liệu nhập vào không hợp lệ (tối thiểu 9 ký tự, tối đa 15 ký tự). Bạn có muốn lưu lại không?"
       social_security_code_tooltip: 'CMND (tối thiểu 9 ký tự, tối đa 15 ký tự)'
+      wrong_medical_insurance_num: This is not a valid Medical Insurance Number (2 characters followed by 13 digits). Do you still wish to continue?
+      nationality: 'Quốc tịch'
+      nationality_tooltip: 'Chọn quốc tịch của bạn'
+  activerecord:
+    attributes:
+      patient:
+        nationality: 'Quốc tịch'
