--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -18,7 +18,7 @@ en:
         new: 'New'
         pending: 'Pending'
         financed: 'Financed'
-        not_financed: 'Not financed'
+        not_financed: 'Finance rejected'
         samples_collected: 'Samples collected'
         samples_received: 'Samples received'
         in_progress: 'In progress'
