--- a/cdx_core/config/locales/select.en.yml
+++ b/cdx_core/config/locales/select.en.yml
@@ -1,6 +1,11 @@
 en:
   select:
     default: Please Select
+    address:
+      regions:
+        northern: 'Northern'
+        southern: 'Southern'
+        central: 'Central'
     patient:
       gender_options:
         male: 'Male'
@@ -108,6 +113,13 @@ en:
         relapsed: 'Relapsed Treatment Aft.'
         loss: 'Loss to follow-up'
         other: 'Other previous treatments'
+        etbval: 'Etb Values Action'
+        failcati: 'Failed Cat I'
+        failcatii: 'Failed Cat II'
+        noncon: 'Non-converters after 2 or 3 months of Cat I or Cat II treatment'
+        relepsecat: 'Relapse of Cat I or/and Cat II'
+        retreatcat: 'Retreatment after lost to follow up of Cat I or/and Cat II'
+        tbmdr: 'TB cases or TB suspects who have contacts with MDR-TB index cases'
       treatment_outcome:
         cured: 'Cured'
         completed: 'Treatment completed'
