--- a/cdx_vietnam/config/locales/models/cdx_vietnam/patient.vi.yml
+++ b/cdx_vietnam/config/locales/models/cdx_vietnam/patient.vi.yml
@@ -2,6 +2,6 @@ vi:
   activerecord:
     attributes:
       patient:
-        name: 'Name *'
+        name: 'Tên *'
         social_security_code: 'CMND *'
         vitimes_id: 'Vitimes Log ID'
